# sample_sql_app

./: Cargo.toml  docker-compose.yaml
migrations/2023-08-06-233712_user/: up.sql
migrations/2023-08-11-023652_create_project]/: up.sql
src/: models.rs  schema.rs
