[package]
name = "sample_sql_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "show_projects"
doc = false

[lib]
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.26" }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]